--- a/Anonymity/01 - 家族答集/公平因果.md
+++ b/Anonymity/01 - 家族答集/公平因果.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *20/10/2021*
-> Link: [[学好会计]] [[道德]] [[尊重]] [[受欢迎]] [[被讨厌]] [[自然法]] [[愚蠢的不尊重]] [[敌人]] [[自由意志]] [[与世界为敌]] [[精神资本家]]
+> Link: [[学好会计]] [[道德]] [[尊重]] [[受欢迎]] [[被讨厌]] [[自然法]] [[愚蠢的不尊重]] [[敌人]] [[Anonymity/01 - 家族答集/自由意志]] [[与世界为敌]] [[精神资本家]]
 > Tag:
 > 沙海拾金:
 
