--- a/Anonymity/01 - 家族答集/高贵的敌人.md
+++ b/Anonymity/01 - 家族答集/高贵的敌人.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *28/10/2021*
-> Link: [[尊重]] [[尊重的实践]] [[愚蠢的不尊重]] [[戒阴阳怪气]] [[敌人]] [[各归各]] [[讽刺]] [[教养]] [[公平因果]] [[血滴子]] [[说脏话]] [[犯我犯人]] [[斗争]] [[教养]] [[面子]]
+> Link: [[尊重]] [[尊重的实践]] [[愚蠢的不尊重]] [[戒阴阳怪气]] [[敌人]] [[各归各]] [[讽刺]] [[教养]] [[Anonymity/01 - 家族答集/公平因果]] [[血滴子]] [[说脏话]] [[犯我犯人]] [[斗争]] [[教养]] [[面子]]
 > Tag:
 > 沙海拾金:
 
