--- a/Anonymity/08 - 文艺答集/马斯洛.md
+++ b/Anonymity/08 - 文艺答集/马斯洛.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link: [[无名烈士]] [[自由意志]] [[爱]]
+> Link: [[无名烈士]] [[沙海拾金/自由意志]] [[爱]]
 > Tag:
 > 沙海拾金:
 
