--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -1,10 +1,15 @@
 # 句子摘录
 
 > Author: #Anonymity 
-> Last update: *22/04/2022* 
+> Last update: *22/04/2022*
 > Link:
 > Tag: 
 
+世界上不存在软弱的性感或者怯懦的聪颖可言。
+
+——[《恋爱原理》](https://www.zhihu.com/question/461267669/answer/1906986171)
+
+---
 
 无论造成多少成本，允许和接受对方自我防御的需求，承认对方自我防御的必要，是人与人打交道的一种天然的责任和义务，一种默认的当然规则，是成人的基本自觉的一部分，是正确的社会化必然包含的自觉。
 
@@ -396,7 +401,6 @@
 
 ---
 
-
 哪怕是和人说一句话，在一个网站发一个帖子，也是一种投资。
 
 每分每秒、一饮一啄，都是投资。
@@ -407,9 +411,7 @@
 
 ——[《拿住不抛》](https://www.zhihu.com/question/403374098/answer/1303918010)
 
-
 ---
-
 
 我虽易朽，
 
@@ -419,18 +421,15 @@
 
 ——[《拿住不抛》](https://www.zhihu.com/question/403374098/answer/1303918010)
 
-
 ---
 
 爱是把你自给而有余的东西送给别人。
 
-  
 你要分享给人的有余，是那个令你废寝忘食，超脱物欲，硕果累累的狂喜。
 
 ——[《爱的痛苦》](https://www.zhihu.com/question/418006057/answer/1827778336)
 
 ---
-
 
 任何东西和爱摆在一起问哪个重要，答案永远是爱更重要。
 
@@ -446,43 +445,29 @@
 
 ---
 
-
 领袖，在某种意义上说，就是“让别人不担心帮坏了会被定罪”的人。
-
   
 ——[《越界》](https://www.zhihu.com/question/374143317/answer/1077388375)
 
-  
 ---
  
-
 不必坐而论道，何如起而行之。
 
 ——[《苏州面》](https://www.zhihu.com/question/495902748/answer/2554024526)
 
-
 ---
-
 
 如果双方都确确实实遵循爱的法则行事，相爱的关系是世界上产出最丰厚的关系。
 
 ——[《重感情》](https://www.zhihu.com/question/431517474/answer/1650590707)
 
-
-
 ---
-
-
 
 “把别人的安全摆在自己的自由之后”，即是敌人的本质定义。
 
 ——[《我的自由与你的安全》](https://www.zhihu.com/question/462633806/answer/2523677473)
 
-  
-
 ---
-
-  
 
 有爱的人隔山跨海如同在，
 
@@ -490,21 +475,13 @@
 
 ——[《同学同事》](https://www.zhihu.com/question/521467583/answer/2477115858)
 
-  
-
 ---
-
-  
 
 试图寻找一条或者几条简单的格言警句来敷衍对稳健可持续的决策体系的探索，是一种非常危险的懒惰。
 
 ——[《简明格言》](https://www.zhihu.com/question/293390085/answer/726784502)
 
-  
-
 ---
-
-  
 
 当自觉深爱而被弃如敝履的时候，失败的一定不是爱本身，而是我们在爱之中终究参杂了自己的私欲。  
   
@@ -518,11 +495,7 @@
 
 ——[《想法》](https://www.zhihu.com/pin/1182455637795061760)
 
-  
-
 ---
-
-  
 
 人终有一死，你所拥有的一切最终都要留给他人。
 
@@ -530,11 +503,7 @@
 
 ——[《评论区》](https://www.zhihu.com/pin/1182455637795061760)
 
-
-
 ---
-
-
 
 勇者的追求是重归平衡与共处，弱者的追求是抄家灭门、斩草除根、“永绝后患”。
 
@@ -542,11 +511,7 @@
 
 ——[《极简主义》](https://www.zhihu.com/question/30112070/answer/585449585)
 
-  
-
 ---
-
-  
 
 如果你的文字，不是为了缓解什么痛苦、也不是为了解决什么问题，那就不要占用别人的时间。
 
@@ -556,11 +521,7 @@
 
 ——[《无病呻吟》](https://www.zhihu.com/question/414652368/answer/1503736168)
 
-  
-
 ---
-
-  
 
 不要去追求当一个无可挑剔的人，这是注定会失败的，甚至可以说是愚蠢的。
 
@@ -570,1847 +531,923 @@
 
 ——[《八佰》](https://www.zhihu.com/question/392095003/answer/1422886152)
 
-  
-
 ---
-
-  
 
 不要寄希望于为一个弱不经风的幼稚民族准备一个无菌病房了此残生，而要让它老练善疑，成为骗子们不愿花费巨额成本来承担的“投资风险”。
 
-  
-
 ——[《带节奏》](https://www.zhihu.com/question/528797784/answer/2457932698)
 
-  
-
 ---
-
-  
 
 浪漫主义、激情主义、“民怨沸腾“并不能替代务实和实践。
 
-  
-
 并不因为你是愤怒的，你就是正确的；
-
-  
 
 也并不因为你是大声的，你就是主流的；
 
-  
-
 更不因为你是激烈的，你就是有力的。
-
-  
 
 黎明前会有特殊的幽暗，这时你不需要做什么特别的奋斗，安心休息，等待天亮就行了。
 
-  
-
 ——[《侵掠如火，不动如山》](https://zhuanlan.zhihu.com/p/503407750)
 
-  
-
 ---
-
-  
 
 对你无法忍受的东西，不要愤怒，而要好奇。对你无法接受的事情，不要否定，而要了解。
 
-  
-
 ——[《学会与历史相处》](https://zhuanlan.zhihu.com/p/503426649)
 
-  
-
 ---
-
-  
 
 广开言路一定会导致一些造谣、煽动的行为趁虚而入，但是这并不能用“关闭言路”去解决——这是经典的因噎废食。
 
-  
-
 它只能靠头脑清醒的人不断的胜出、不断的发迹、靠上当受骗的人不断的损失、不断的吃亏，去逐渐磨练出一个充满警觉、拥有精湛的怀疑的技术的群体意识来解决。
-
-  
 
 其关键在于怀疑的技术与艺术。
 
-  
-
 ——[《带节奏》](https://www.zhihu.com/question/528797784/answer/2457932698)
-
-  
 
 ---
 
-  
-
 骗子的胆子，都是傻子喂出来的。你需要仔细检查你是不是那个傻子。
 
-  
-
-——[外媒报道乌商人将俄战机残骸碎片制成钥匙扣售往国外，收益用来支持乌军，这透露出了哪些信息？](https://www.zhihu.com/question/530922446/answer/2467933225)
+——[《骗子的胆子》](https://www.zhihu.com/question/530922446/answer/2467933225)
 
 ---
 
 怀疑指向确定性的增加，而不是确定性的减少——它总是提出一系列有鲜明的可证伪性的、并富有效率和经济性的方法来不断的得出进一步的结论。
 
-  
-
 猜疑则总是在提出不具备可证伪性或无效率、不经济的方法，只会徒然增加对不确定性的恐惧。
-
-  
 
 前者越来越驱动决策和行动，后者则恰恰相反。
 
-  
-
 ——[《想法》](https://www.zhihu.com/pin/1500810042437320704)
 
-  
-
 ---
-
-  
 
 政治实在不是没有管理经验和领导经验的人所能有效讨论的话题。
 
 没有实践经验的痕迹，就没有谈论的基本基础。
 
-  
-
 ——[《想法》](https://www.zhihu.com/pin/1500575117885763584)
 
-  
-
 ---
-
-  
 
 人只能用一种有实践的理论去对抗另一种有实践的理论。 而不能用一种没实践的理论去对抗有实践的理论。
 
-  
-
 后者其实是一个无效的方法。
-
-  
 
 ——[《想法》](https://www.zhihu.com/pin/1500582812322942976)
 
-  
-
 ---
-
-  
 
 把一切人生中维持性的事务构建成习惯；
 
-  
-
 把人生中进取性的价值追求构建成瘾。
-
-  
 
 ——[《习惯》](https://www.zhihu.com/question/22573936/answer/1320747151)
 
-  
-
 ---
-
-  
 
 爱不是“送给对方全世界”，爱是无声的把全世界放在对方伸手可及的地方，等对方来拿。
 
-  
-
 爱是主动的被动。
-
-  
 
 ——[《主动的被动》](https://www.zhihu.com/question/29139583/answer/2206995808)
 
-  
-
 ---
-
-  
 
 世事无常，你可以有常。
 
-  
-
 ——[《疗愈艺术》](https://www.zhihu.com/question/458078011/answer/1904038706)
 
-  
-
 ---
-
-  
 
 世界的存亡，皆不如你重要。
 
-  
-
 一个一个的“你”都过得好，世界自存。
-
-  
 
 ——[《实践中的正义》](https://www.zhihu.com/question/518517937/answer/2374713334)
 
-  
-
 ---
-
-  
 
 究竟哪一方最终会被历史判定为不正义的一方？
 
-  
-
 在旁观者们的眼中，“让步余地更大，却选择不让步而宁可纷争发生/持续/升级”的一方，会被认定为不正义。
-
-  
 
 这一正义观最终不依赖纷争的初始缘由，只关注纷争的终结。
 
-  
-
 这是自然法的判决，历史的回答，高于一切。
-
-  
 
 ——[《实践中的正义》](https://www.zhihu.com/question/518517937/answer/2374713334)
 
-  
-
 ---
-
-  
 
 立场本身并无什么正义或邪恶。被与你立场或利益相背的人加以道德贬低，你应该早有心理准备而且总要学会无视这种没有意义的干扰。
 
-  
-
 但因为惊慌或者焦虑就放下基本的怀疑精神、放弃料敌从宽的勇气，去借助想象敌人的弱小和无能、想象困难的轻微来安慰自己“必将获胜”，去放任自己用迷信来补足信仰的不足，这绝无好结果。
-
-  
 
 无论你是什么立场都一样。
 
-  
-
 ——[《并非建政》](https://zhuanlan.zhihu.com/p/479540176)
 
-  
-
 ---
-
-  
 
 敢于与被从宽预料的敌人战斗到底，才能被称为勇气。
 
-  
-
 只敢与被设想一定愚蠢的敌人对抗，从一开始就是可悲的怯懦。
-
-  
 
 声音越大，越显怯懦。
 
-  
-
 而一切的幸福都与这种强壮的心灵有关。
-
-  
 
 你无法靠“相信太平无事”获得幸福，你只能靠心灵强壮获得平安。
 
-  
-
 ——[《并非建政》](https://zhuanlan.zhihu.com/p/479540176)
 
-  
-
 ---
-
-  
 
 你不需要信任人的道德，但你可以大概的相信人的经济理性。
 
-  
-
 Just follow the money, the truth is always in the neighborhood.
-
-  
 
 ——[《Follow the money》](https://www.zhihu.com/question/521154275/answer/2384990036)
 
-  
-
 ---
-
-  
 
 没有ta人的爱，其实是没有自由可言的。
 
-  
-
 自己没有爱，也无法接受别人的自由。
-
-  
 
 爱是自由的唯一保证。
 
-  
-
 ——[《爱与自由》](https://www.zhihu.com/question/458175015/answer/1872919909)
 
-  
-
 ---
-
-  
 
 想做到做不到那叫退而求其次，做得到不去做这叫自误。
 
-  
-
 ——[《高管写代码》](https://www.zhihu.com/question/23321862/answer/1998413362)
 
-  
-
 ---
-
-  
 
 但凭己心，常怀愧疚。
 
-  
-
 ——[《电车难题》](https://github.com/itrewub/jh-notes/blob/main/titled/%E7%94%B5%E8%BD%A6%E9%9A%BE%E9%A2%98.md)
 
-  
-
 ---
-
-  
 
 人生的元问题可以规范的表达为——“找到一个足以支撑我接受死亡及死亡风险的理由“。
 
-  
-
 ——[《职业规划》](https://www.zhihu.com/question/25583089/answer/899020828)
 
-  
-
 ---
-
-  
 
 工作是一种死法，是一种定意选定的死法。是一种对自身必将死亡的命运的彻底接纳，和在这个接纳基础上作出的安排。
 
-  
-
 因为有必死的觉悟，所以有不为所谓“生机”所动的坚决。
-
-  
 
 然后才有选择可言。
 
-  
-
 ——[《职业规划》](https://www.zhihu.com/question/25583089/answer/899020828)
 
-  
-
 ---
-
-  
 
 怜悯者从不羡慕。
 
-  
-
 ——[《不羡慕》](https://www.zhihu.com/question/473057846/answer/2015663219)
 
-  
-
 ---
-
-  
 
 别人不敢的，你敢；
 
-  
-
 别人不肯的，你肯；
-
-  
 
 于是别人不能的，你能。
 
-  
-
 ——[《逃避伤害》](https://www.zhihu.com/question/287849222/answer/458128741)
 
-  
-
 ---
-
-  
 
 所谓活着，就是一天天地为别人死去。
 
-  
-
 ——[《逃避伤害》](https://www.zhihu.com/question/287849222/answer/458128741)
 
-  
-
 ---
-
-  
 
 真正的爱充塞天地，从无匮乏可言。
 
-  
-
 ——[《缺爱症》](https://www.zhihu.com/question/40315645/answer/783805070)
 
-  
-
 ---
-
-  
 
 当失败不可能真正伤害到你时，失败就失去了一切真实的威力。
 
-  
-
 ——[《约伯》](https://github.com/AaNingNing/Sth-Matters/blob/main/Anonymity/09%20-%20%E7%A5%9E%E5%AD%A6%E7%AD%94%E9%9B%86/%E5%9C%A3%E7%BB%8F%20-%20%E7%BA%A6%E4%BC%AF.md)
 
-  
-
 ---
-
-  
 
 “仍然存在着你没识别出的风险”这一客观事实是永恒的、绝对的，与你悲观或是乐观毫无关系。
 
-  
-
 ——[《悲观与乐观》](https://www.zhihu.com/question/266034365/answer/557697304)
 
-  
-
 ---
-
-  
 
 船上的厨师不必过于担心自己的衰老会耽误船的航程。
 
-  
-
 ——[《悲观与乐观》](https://www.zhihu.com/question/266034365/answer/557697304)
 
-  
-
 ---
-
-  
 
 人没有资格凭着自己的智慧就绝望。
 
-  
-
 ——[《悲观与乐观》](https://www.zhihu.com/question/266034365/answer/557697304)
 
-  
-
 ---
-
-  
 
 你首先是幸运的，然后才是努力的。
 
-  
-
 你过往的成功，你自己的努力本来就只占有很小的一部分“功劳”。
-
-  
 
 幸运才是它们得以实现的主要原因。
 
-  
-
 ——[《悲观与乐观》](https://www.zhihu.com/question/266034365/answer/557697304)
 
-  
-
 ---
-
-  
 
 世界上所有的财富加起来，也买不下一名绝对拒绝死亡的人的医疗账单。
 
-  
-
 ——[《财富观》](https://www.zhihu.com/question/314627020/answer/1193533378)
 
-  
-
 ---
-
-  
 
 有侥幸的人没原则，没原则的人没前途。
 
-  
-
 ——[《创业红线》](https://www.zhihu.com/question/466575462/answer/1955099997)
 
-  
-
 ---
-
-  
 
 值得，就是对方明白得到的是人的生命，知道这是多么贵重，绝不肯让这些牺牲空掷。
 
-  
-
 ——[《值得》](https://www.zhihu.com/question/348105760/answer/868979963)
 
-  
-
 ---
-
-  
 
 艺术追求是没有失败可言的，只有不追求本身才是唯一的失败。
 
-  
-
 ——[《世界史》](https://www.zhihu.com/question/334543952/answer/817647334)
 
-  
-
 ---
-
-  
 
 艺术是坚持创新的结果。
 
-  
-
 在任何领域，不信邪、不守旧、不休止、百折不回、永不放弃的创新，你所得到的新生的、拥有生命力的结果，就是艺术作品。
-
-  
 
 艺术作品里所蕴含的灵魂，就是艺术。
 
-  
-
 艺术才是人类应有的存在方式，“艺术家”是上帝创造人类时为人类指定的预定身份。
-
-  
 
 ——[《世界史》](https://www.zhihu.com/question/334543952/answer/817647334)
 
-  
-
 ---
-
-  
 
 信为疑之余，疑为信之本。
 
-  
-
 你要相信的东西，是你竭尽怀疑的技术与艺术之后所仍能余下站立的东西——这就是“信为疑之余”；
-
-  
 
 你所相信的东西有多值得你相信，不看任何其他指标，只看你对它竭尽了多少怀疑的努力。这就是“疑为信之本”。
 
-  
-
 ——[《世界史》](https://www.zhihu.com/question/334543952/answer/817647334)
 
-  
-
 ---
-
-  
 
 不但无惧于意外，
 
-  
-
 反而能将一切意外视为自己的朋友；
-
-  
 
 不但无惧于失去，
 
-  
-
 而且将不得不舍弃视为一种幸运；
-
-  
 
 不但不畏惧付出，
 
-  
-
 而且将最大程度的付出视为值得追求的价值。
-
-  
 
 ——[《耽误了五六年》](https://www.zhihu.com/question/38984755/answer/2032093450)
 
-  
-
 ---
-
-  
 
 爱不是去承诺什么永远、一定、保证。
 
-  
-
 爱是自知不能，尽力而为；
-
-  
 
 爱是帮助对方不必依赖于自己的“永远”、“一定”和“保证”。
 
-  
-
 我不能保证我永远存在或者好意长存，所以我要帮助你无惧于我可能不再存在或好意不存的影响。
-
-  
 
 ——[《重组家庭的难题》](https://www.zhihu.com/question/438987171/answer/1678525490)
 
-  
-
 ---
-
-  
 
 爱一个人，不是要去让这人相信你会永远爱ta，而是要让这人不再害怕你会不爱ta。
 
-  
-
 ——[《重组家庭的难题》](https://www.zhihu.com/question/438987171/answer/1678525490)
 
-  
-
 ---
-
-  
 
 注目在事实上，事实就是世界的话语。不要听人说什么，人只是事实不称职的信使。
 
-  
-
 听事实在说什么，是事实在决定你的命运。
-
-  
 
 ——[《操纵》](https://www.zhihu.com/question/59488564/answer/1688485320)
 
-  
-
 ---
-
-  
 
 你在寻找的状态中，真理便与你同在，
 
-  
-
 无论你此刻有多“错”；
-
-  
 
 你停止寻找，真理便离你而去，
 
-  
-
 无论你此时有多“对”。
-
-  
 
 ——[《学习哲学》](https://www.zhihu.com/question/304130360/answer/550517189)
 
-  
-
 ---
-
-  
 
 没有“我”，虚荣自散。
 
-  
-
 ——[《虚荣》](https://www.zhihu.com/question/66238921/answer/1666763899)
 
-  
-
 ---
-
-  
 
 人不应该拒绝一种可以兴起爱的因缘。
 
-  
-
 这个世界上的爱永远都太少了，如果有任何一种理由，可以激起你去爱任何一群人，你都不应该拒绝它。
-
-  
 
 无论它有多“粗糙”，多经不起“质疑”。
 
-  
-
 那根本就不重要。
-
-  
 
 ——[《爱国》](https://www.zhihu.com/question/451566522/answer/2349951843)
 
-  
-
 ---
-
-  
 
 是我本来就打算为你而死，我可以在任何时候放弃坚持己见。
 
-  
-
 我唯一在继续坚持反对的原因，根本不是因为我自己，而是因为你。
-
-  
 
 ——[《团结》](https://www.zhihu.com/question/473290554/answer/2008235759)
 
-  
-
 ---
-
-  
 
 不怕肯定别人，不惜否定自己。
 
-  
-
 ——[《提升格局》](https://www.zhihu.com/question/28213398/answer/1656801406)
 
-  
-
-  
-
 ---
-
-  
 
 恐惧不是信的证据，而是信不过的证据。
 
-  
-
 ——[《恐惧》](https://www.zhihu.com/question/452617540/answer/1814490681)
 
-  
-
 ---
-
-  
 
 爱，不思恶。
 
-  
-
 ——[《爱》](https://www.zhihu.com/question/444126370/answer/1743255025)
 
-  
-
 ---
-
-  
 
 你的成功微不足道，是你的痛苦令人动容。
 
-  
-
 ——[《自卑》](https://www.zhihu.com/question/20694013/answer/1846677969)
 
-  
-
 ---
-
-  
 
 强迫症哪里是真的喜欢有强迫症呢，
 
-  
-
 那其实是受不了“被这些细节拖累、失去成功的可能”的想象。
-
-  
 
 ——[《揉不得沙子》](https://www.zhihu.com/question/296425882/answer/1314393847)
 
-  
-
 ---
-
-  
 
 无私无闻者无敌，至卑至微者至圣。
 
-  
-
 ——[《公事无私怨》](https://www.zhihu.com/question/452534650/answer/1814615350)
 
-  
-
 ---
-
-  
 
 世界上根本不存在“普通人”，只有自己想起自己都觉得没兴趣的人。
 
-  
-
 ——[《获美》](https://www.zhihu.com/question/278936990/answer/1725450654)
 
-  
-
 ---
-
-  
 
 你不以卑贱的态度去从事你的岗位，
 
-  
-
 那么无论你的岗位如何具有所谓的可替代性，
-
-  
 
 你的岗位也会因为你的存在而变得不可替代。
 
-  
-
 ——[《低贱的事情》](https://www.zhihu.com/question/356835825/answer/955654925)
 
-  
-
 ---
-
-  
 
 真正的勇敢，是对“不勇敢”的怯懦。
 
-  
-
 ——[《美德》](https://www.zhihu.com/question/403395713/answer/1310486606)
 
-  
-
 ---
-
-  
 
 世界上最受诅咒的事并不是恶，
 
-  
-
 而是窃取爱的名。
-
-  
 
 ——[《子女的隐私》](https://www.zhihu.com/question/349129380/answer/1659225401)
 
-  
-
 ---
-
-  
 
 爱必须由被爱成全。
 
-  
-
 ——[《恋爱原理》](https://www.zhihu.com/question/372805066/answer/1915076008)
 
-  
-
 ---
-
-  
 
 在全力以赴而仍然被有权做这判定的人认为不够好的时候，
 
-  
-
 一个英雄会道歉，
-
-  
 
 而一个普通人会抱怨。
 
-  
-
 ——[《恋爱原理》](https://www.zhihu.com/question/372805066/answer/1915076008)
 
-  
-
 ---
-
-  
 
 难得的根本不是“爱情”，难得的是不破灭。
 
-  
-
 不是圣人才配得“爱情”，而是圣人才配得不破灭。
-
-  
 
 不破不灭，才是你在追寻的东西。
 
-  
-
 ——[《值得一嫁》](https://www.zhihu.com/question/22035988/answer/887331920)
 
-  
-
 ---
-
-  
 
 允许帮助，是有资格门槛的，
 
-  
-
 不是随便什么人都有资格与你有恩，
-
-  
 
 甚至，也不是随便什么人都有资格与你有仇。
 
-  
-
 ——[《坚持感动》](https://www.zhihu.com/question/450758733/answer/1820584008)
 
-  
-
 ---
-
-  
 
 世界常常原谅愚蠢，但是对待傲慢，总是极尽残忍。
 
-  
-
 ——[《HM》](https://www.zhihu.com/question/451051189/answer/1798289573)
 
-  
-
 ---
-
-  
 
 爱一定始终会是穷尽了一个人的智慧的结果。
 
-  
-
 直到生命的最后一刻，人的灵智消失为止。
-
-  
 
 ——[《永远忐忑》](https://github.com/itrewub/jh-notes/blob/9bf79aea9d941634d6f89097e42d427bbdb27ef3/titled/%E6%B0%B8%E8%BF%9C%E5%BF%90%E5%BF%91.md)
 
-  
-
 ---
-
-  
 
 极端化是一种毋庸置疑的背叛。
 
-  
-
 ——[《极端不忠诚》](https://www.zhihu.com/question/420057932/answer/1461844937)
 
-  
-
 ---
-
-  
 
 不得其人、不当其时、不在其所，不论其事。
 
-  
-
 ——[《否定女权的父亲》](https://github.com/itrewub/jh-notes/blob/9f323736ffab9b345216d677aa7fd1fd1650df49/titled/%E5%90%A6%E5%AE%9A%E5%A5%B3%E6%9D%83%E7%9A%84%E7%88%B6%E4%BA%B2.md)
 
-  
-
 ---
-
-  
 
 谁想要，谁就为自己的需求负责，谁就负担为此产生的成本。
 
-  
-
 没有人理所应该为你自己的需求付出任何额外的代价，这是“该谁负责”的统一计算方法。
-
-  
 
 ——[《谁的责任》](https://www.zhihu.com/question/20248729/answer/2067118565)
 
-  
-
 ---
-
-  
 
 自由而孤独是一种宿命，是一种命定的义务。
 
-  
-
 你的自我最终必定归于你，根本就没有安排别的选择给你。
-
-  
 
 ——[《保持自我》](https://www.zhihu.com/question/315494956/answer/1465036439)
 
-  
-
 ---
-
-  
 
 你唯一的选择是适应，抛弃一切幻想的适应，一丁点情绪能量都不浪费的适应。
 
-  
-
 因为你就是一点能量都不浪费，都不见得适应得够快。
-
-  
 
 ——[《教教我》](https://www.zhihu.com/question/466550532/answer/1973575658)
 
-  
-
 ---
-
-  
 
 强大是为了拥有更强的造福于他人的力量，从而得到他人出于自利的本能而自发生出的拥护和帮助。
 
-  
-
 人因为我强而恐惧，这是耻辱。因为只有流氓才会导致这种反应。
-
-  
 
 人因为我强而欢欣鼓舞，而觉得看见希望，才是荣耀。
 
-  
-
 后者才是君子之道，是为王之道。
-
-  
 
 ——[《历史必然》](https://www.zhihu.com/question/41948958/answer/617760777)
 
-  
-
 ---
-
-  
 
 除了绝对无可避免的敌人，不为国家多制造任何一个敌人，除了实在不可争取的朋友，为民族争取每一个朋友。
 
-  
-
 这是每一个真正爱国的普通人没有理由不去时刻遵循的行事原则。
-
-  
 
 ——[《仇日》](https://www.zhihu.com/question/21030735/answer/1969703678)
 
-  
-
 ---
-
-  
 
 幸福不是你背后的路，也不是你远方的目标，
 
-  
-
 而是你前进时掠过耳边的风。
-
-  
 
 你在动，就有风。
 
-  
-
 你停下，不管你停在多么了不起的地方，风就没了。
-
-  
 
 ——[《幸福感》](https://github.com/itrewub/jh-notes/blob/9bf79aea9d941634d6f89097e42d427bbdb27ef3/titled/%E5%B9%B8%E7%A6%8F%E6%84%9F.md)
 
-  
-
 ---
-
-  
 
 世界上根本没有“没能力报复”这个情况。
 
-  
-
 再弱小的人，也有能力报复。
-
-  
 
 再弱小的报复，遇到了恰当的时机和运势，手无缚鸡之力之人的一句话都足可以致命了。
 
-  
-
 任何人不报复，都是一种决定，一种迈向温柔的努力。
-
-  
 
 世界必不轻看。
 
-  
-
 ——[《温柔》](https://github.com/itrewub/jh-notes/blob/383acd7ed898129442f279a90f20ff8343b8cb8c/titled/%E6%B8%A9%E6%9F%94.md)
 
-  
-
 ---
-
-  
 
 任何人都不应该追求。
 
-  
-
 追求只能用于“事业”，“成就”，追求的宾语根本就不可以是人。
-
-  
 
 心里装着别人的自由到了这一步的人，从来用不着追。
 
-  
-
 ——[《不可追》](https://www.zhihu.com/question/300710706/answer/1630731765)
 
-  
-
 ---
-
-  
 
 勇于任事，甘冒风险，受责无怨。
 
-  
-
 “勇于任事”不见得是爱，“甘冒风险”也不见得是爱，“受责无怨”却一定是。
-
-  
 
 你们不是问什么是爱吗？
 
-  
-
 这个就是爱。
-
-  
 
 任何人这样对你们，ta所做的事情，就称为爱。
 
-  
-
 ——[《不抱怨》](https://www.zhihu.com/question/20064565/answer/1668449718)
 
-  
-
 ---
-
-  
 
 所有人的自由，在根本上都是靠其他人并无坚实理由的无条件克制自己的贪念成全出来的。
 
-  
-
 这并不因为“没有人可以克制得一丝不漏”，或者“世界上有一些人有功能缺陷无法做到”而有什么实质的改变。
-
-  
 
 而这个“无条件的克制”就是爱。
 
-  
-
 ——[《爱与自由》](https://www.zhihu.com/question/458175015/answer/1872919909)
 
-  
-
 ---
-
-  
 
 简单来说，世界上没有“没有思想的人”——只要ta会算工资和找零钱，ta就有思想。
 
-  
-
 所以世界上根本不存在“像动物一样的人”。
-
-  
 
 世界上只有向自己或别人假装像动物一样的人。
 
-  
-
 ——[《无思想的人》](https://www.zhihu.com/question/455197019/answer/1861277741)
 
-  
-
 ---
-
-  
 
 最高级别的修养，是一种熊熊燃烧的愤怒。
 
-  
-
 只不过那种愤怒没有被用作杀人伤人的理由、不道德的资格、放纵的特许证，它被用在了隐忍、坚持和决绝的自制上。
-
-  
 
 你的愤怒，只应该带给你新的义务，没有给你带来新的权利！
 
-  
-
 ——[《FURY》](https://www.zhihu.com/question/266645399/answer/1969210271)
 
-  
-
 ---
-
-  
 
 如果心中无道，则术无可补。
 
 ——[《对事不对人》](https://www.zhihu.com/question/21062014/answer/1011783718)
 
-  
-
 ---
-
-  
 
 爱是人类借以穿透一切兽性、消解一切恶念，最终战胜一切罪恶的神性内核。
 
-  
-
 是人所能行最近于神的事。
-
-  
 
 ——[《爱》](https://www.zhihu.com/question/444126370/answer/1743255025)
 
-  
-
 ---
-
-  
 
 走不走的远，看斤斤计较的是什么。
 
-  
-
 是斤斤计较于对方吃的亏，还是斤斤计较于自己占不到的便宜。 前一种斤斤计较恰恰是亲密关系长期稳固的关键。
-
-  
 
 可惜绝大多数人在说“斤斤计较”时，是后一种。
 
-  
-
 ——[《为“爱”妥协》](https://www.zhihu.com/question/381473957/answer/1236112906)
 
-  
-
 ---
-
-  
 
 人生最大的遗憾，其实不是活的不幸福，
 
-  
-
 而是因为恐惧死亡和匮乏，而没有真正毫无顾忌的、专心专意的爱过。
-
-  
 
 ——[《老有所依》](https://www.zhihu.com/question/403290284/answer/1360171805)
 
-  
-
 ---
-
-  
 
 神爱世人，神对世人的爱就是爱独一无二的绝对示范。
 
-  
-
 而神对人的爱最可确认的一点，就是神赐予人生命。
-
-  
 
 生命的本质就是可能性的总和。
 
-  
-
 ——[《Sin》](https://github.com/AaNingNing/Sth-Matters/blob/36d7519af0d79a5351e21850a597c3d66e761eba/Anonymity/09%20-%20%E7%A5%9E%E5%AD%A6%E7%AD%94%E9%9B%86/Sin.md)
 
-  
-
 ---
-
-  
 
 你如果真的在乎，
 
-  
-
 你的思考是什么？
-
-  
 
 你的计划是什么？
 
-  
-
 你的行动是什么？
-
-  
 
 你的结果是什么？
 
-  
-
 ——[《不在乎》](https://www.zhihu.com/question/300020038/answer/1864147792)
 
-  
-
 ---
-
-  
 
 任何事情，擅长它的人一定是做得最多的人。
 
-  
-
 做得最多的人往往出于两类理由，
-
-  
 
 要么是因为某种原因导致ta不做不行，
 
-  
-
 要么是ta自己真的喜欢这么做。
-
-  
 
 ——[《聪明人》](https://www.zhihu.com/question/28484672/answer/1094208041)
 
-  
-
 ---
-
-  
 
 所有的人都撒谎，所有的人都偷窃，所有的人都傲慢，所有的人都虚伪，所有的人都在侵犯别人的自由。
 
-  
-
 并无例外。
-
-  
 
 因为所有的人都可怜，所有的人都无知，所有的人都想活着。
 
-  
-
 并无例外。
-
-  
 
 ——[《对人类失望》](https://www.zhihu.com/question/445897619/answer/1757431297)
 
-  
-
 ---
-
-  
 
 恩这个东西，是最容易成仇的。
 
-  
-
 明白人避恩如避仇。
-
-  
 
 ——[《恩》](https://www.zhihu.com/question/48604008/answer/1944320230)
 
-  
-
 ---
-
-  
 
 你平安了，你就知道当你的子女成年，你能给ta的最好铠甲是什么。
 
-  
-
 不是什么通天彻地的“专业能力”，也不是那种所谓的八面玲珑的“情商”，
-
-  
 
 而是一个善良、温柔同时理智、现实、强健的人格。
 
-  
-
 ——[《平庸》](https://www.zhihu.com/question/341127721/answer/971074538)
 
-  
-
 ---
-
-  
 
 人活着，想要活得踏实、宁静，最根本的要害既不是掌握什么样的技能，也不是追求何等高尚的趣味，而是将价值归依于他人。
 
-  
-
 ——[《免于极端》](https://www.zhihu.com/question/309682535/answer/582181598)
 
-  
-
 ---
-
-  
 
 谁都是按照“最大限度偷懒”原则生存的，谁也不会凭空“勤劳”。
 
-  
-
 ——[《聪明族》](https://www.zhihu.com/question/413909432/answer/1409441417)
 
-  
-
 ---
-
-  
 
 悟性是什么东西？
 
-  
-
 就是“修改再试”的热情。
-
-  
 
 ——[《悟性》](https://www.zhihu.com/question/24123447/answer/1656830819)
 
-  
-
 ---
-
-  
 
 人生最重大的一种因果倒置——价值判断先于价值观。
 
-  
-
 ——[《家里不富裕》](https://www.zhihu.com/question/296333267/answer/551002721)
 
-  
-
 ---
-
-  
 
 知者不足为师、能者也不足为师，只有觉者可以为师。
 
-  
-
 ——[《尊师》](https://www.zhihu.com/question/333195546/answer/770295864)
 
-  
-
 ---
-
-  
 
 痛苦对人的真正的伤害，是靠造成不择手段的逃避，引诱人连环犯错，陷入自己无法面对的罪恶、更无法面对的痛苦威胁，一路狂奔。
 
-  
-
 是那些二次、三次、四次在试图逃避中做出的更大的错误决定，才是痛苦最大的杀伤所在。
-
-  
 
 ——[《情绪失控的孩子》](https://www.zhihu.com/question/438943586/answer/1673234224)
 
-  
-
 ---
-
-  
 
 一切孤独的根源：
 
-  
-
 你缺少足够的勇气，不敢将这判断权真正交给任何人，于是你无法与人建立真实的关系；
-
-  
 
 你也缺少足够的爱，使得没有人胆敢将这判断权交给你，于是你从另一面无法与人建立真实的关系。
 
-  
-
 ——[《不可论断人》](https://www.zhihu.com/question/35551796/answer/710298376)
 
-  
-
 ---
-
-  
 
 一个“成功的人生”，不是指“亿万家财”，“声明卓著”，
 
-  
-
 而是指一个仁慈的君主以ta简洁、准确、稳定而又有效的约法所行的贤明的治理，以至于ta所行之处，必有鲜花盛开，百废俱兴。
-
-  
 
 所居住的人们没有恐惧，却有面对自我的勇气和面对未知的信心。
 
-  
-
 ——[《条理》](https://www.zhihu.com/question/30173526/answer/1556806982)
 
-  
-
 ---
-
-  
 
 做一件事，是只要这件事有可能做成，就已经可做。
 
-  
-
 有逻辑上可见的成功概率、有无论成败都值得一做的理由、有足以保证“成固欣然败亦喜”的安排，满足这三个条件，一件事情就绝对可做。
-
-  
 
 ——[《苦而不忍》](https://www.zhihu.com/question/432723456/answer/1633172489)
 
-  
-
 ---
-
-  
 
 真正永远不错的，是万变。
 
-  
-
 ——[《前途》](https://www.zhihu.com/question/409844164/answer/1494926798)
 
-  
-
 ---
-
-  
 
 如果你没有一个恰当的价值观，对你将不存在任何合理的职业选择。
 
-  
-
 如果你从事你的职业的原因仅仅只是“为了赚钱”，那么这个心态本身就注定了你并没有选择命运的能力，而仅仅只是被“最大利润期望”的幻像推搡揉捏罢了。
-
-  
 
 你每一次的选择，都只是一种伪装成“理性取舍”，名为“进取“的放弃，诈作“勇敢”的逃窜。
 
-  
-
 ——[《职业规划》](https://www.zhihu.com/question/25583089/answer/899020828)
 
 ---
-
-  
 
 人可能有的最大的误判，就是以为自己是自己最大的盟友，却不知道恰恰是你自己才是你自己最大的敌人。
 
-  
-
 ——[《职业规划》](https://www.zhihu.com/question/25583089/answer/899020828)
 
-  
-
 ---
-
-  
 
 无论你富贵或是贫穷、健全还是残疾、顺境还是逆境，人都应该坚持不懈的努力。
 
-  
-
 这不是为了糊口或者出人头地，而就是因为这是人度过人生、享受人生的最好方式。
-
-  
 
 无论谁跟你说了什么关于努力的命题，也不管这些命题是真是假，都跟你是不是要努力没有关系。
 
-  
-
 ——[《精神资本家》](https://www.zhihu.com/question/417907087/answer/1508359096)
 
-  
-
 ---
-
-  
 
 一件事在没有做出来之前，总是没有先例的；第一个例外被看见以前，总是没有例外的。即使真的没有过例外，仍然要谈论内部机制、内在逻辑去谈论必然性，而不是仅仅靠现象的重复去认证必然性。
 
-  
-
 走后一条路，是一种对经验的迷信，是对理性的背叛。
-
-  
 
 ——[《历史必然》](https://www.zhihu.com/question/41948958/answer/617760777)
 
-  
-
 ---
-
-  
 
 每一种歧视，都应该化为奋斗的动力。
 
-  
-
 成为比他们更好的人。
-
-  
 
 要比他们更有学识，更有爱。
 
-  
-
 更勇敢、也更宽容。
-
-  
 
 ———[《想法》](https://www.zhihu.com/pin/1182425749075693568)
 
-  
-
 ---
-
-  
 
 不要去追求别人的尊重和认可。
 
-  
-
 因为这样等于无形中给了别人一种控制你的权力。
-
-  
 
 ——[《想法》](https://github.com/AaNingNing/Sth-Matters/blob/main/%E6%B2%99%E6%B5%B7%E6%8B%BE%E9%87%91/%E8%BF%BD%E6%B1%82%E8%AE%A4%E5%8F%AF.md)
 
-  
-
 ---
-
-  
 
 世上唯一的狂妄是否定事实。
 
-  
-
 ——[《想法》](https://www.zhihu.com/pin/1313617600543457280)
 
-  
-
 ---
-
-  
 
 如果你要恨，你总能找到足够的理由；
 
-  
-
 如果你要爱，你总能找到足够的勇气。
-
-  
 
 ——[《想法》](https://www.zhihu.com/pin/1212692552681566208)
 
-  
-
 ---
-
   
-
-世界上不存在软弱的性感或者怯懦的聪颖可言。
-
-  
-
-——待添加
-
-  
-
----
-
-  
-
 够强的人能认输。
 
-  
-
 ——待添加
 
-  
-
 ---
-
-  
 
 人为什么一定要幸存呢？
 
-  
-
 当死，则死。
-
-  
 
 ——待添加
 
-  
-
 ---
-
-  
 
 爱在任何意义上，都不意味着“拥有”。
 
-  
-
 ——待添加
 
-  
-
 ---
-
-  
 
 人间天堂不是一个彼此信任的世界，
 
-  
-
 而是一个彼此不追究失信的世界。
-
-  
 
 ——待添加
 
-  
-
 ---
-
-  
 
 你只能接纳自己的失败，可以接纳任何失败，但不可以在任何意义上接纳自己的不努力。
 
-  
-
 ——待添加
 
-  
-
 ---
-
-  
 
 逃避是伪装成选择的没有选择。
 
-  
-
 ——待添加
 
-  
-
 ---
-
-  
 
 万事万物相互助益，总教有爱的人得益。
 
-  
-
 ——待添加
 
-  
-
 ---
-
-  
 
 你喜欢什么就拿起，不喜欢就放下，需求和条款把你逼到哪里，你就死磕到哪里，任由上天带你到它想带你去的地方。
 
-  
-
 你会发现ta对你最终包含好意——常常超出你的想象。
-
-  
 
 ——待添加
 
-  
-
 ---
-
-  
 
 人的“心声”是非常沉重的东西，本来就不应该有很多人来听。能无限承受人的心声的只有上帝。
 
@@ -2419,6 +1456,3 @@ Just follow the money, the truth is always in the neighborhood.
 ——待添加
 
 ---
-  
-
-#未完待续TBC
