--- a/Anonymity/01 - 家族答集/不可论断人.md
+++ b/Anonymity/01 - 家族答集/不可论断人.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link: [[爱]] [[自由意志]] [[爱与自由]]
+> Link: [[爱]] [[Anonymity/01 - 家族答集/自由意志]] [[爱与自由]]
 > Tag:
 > 沙海拾金:
 
