--- a/Anonymity/01 - 家族答集/当然反驳权.md
+++ b/Anonymity/01 - 家族答集/当然反驳权.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link: [[表态反对]] [[反驳]] [[无明]] [[可信]] [[坚持]] [[自由意志]] [[自由主义]]
+> Link: [[表态反对]] [[反驳]] [[无明]] [[可信]] [[坚持]] [[Anonymity/01 - 家族答集/自由意志]] [[自由主义]]
 > Tag: #处事 #家族
 > 沙海拾金:[[可爱的好处]]
 
