--- a/Anonymity/09 - 神学答集/圣经 - 神的样子.md
+++ b/Anonymity/09 - 神学答集/圣经 - 神的样子.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *26/07/2021*
-> Link: [[上帝 - 人格化]] [[斑点狗]] [[上帝 - 存在]] [[爱]] [[自由意志]]
+> Link: [[上帝 - 人格化]] [[斑点狗]] [[上帝 - 存在]] [[爱]] [[沙海拾金/自由意志]]
 > Tag:
 > 沙海拾金:
 
