--- a/Anonymity/09 - 神学答集/心不自由.md
+++ b/Anonymity/09 - 神学答集/心不自由.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *26/07/2021*
-> Link: [[烦躁]] [[自由意志]] [[能力]] [[理想]] [[信仰是什么]] [[信的捆绑]] [[信的力量]]
+> Link: [[烦躁]] [[沙海拾金/自由意志]] [[能力]] [[理想]] [[信仰是什么]] [[信的捆绑]] [[信的力量]]
 > Tag:
 > 沙海拾金:
 
