fix special link format

--- a/Anonymity/04 - 社科答集/居留政策.md
+++ b/Anonymity/04 - 社科答集/居留政策.md
@@ -15,44 +15,44 @@
 
 这是现在其它有永久居留政策的国家/地区名单：
 
-* *阿根廷*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E9%2598%25BF%25E6%25A0%25B9%25E5%25BB%25B7)
-* *澳大利亚*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%25BE%25B3%25E5%25A4%25A7%25E5%2588%25A9%25E4%25BA%259A)（*澳洲永久性居民*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%25BE%25B3%25E6%25B4%25B2%25E6%25B0%25B8%25E4%25B9%2585%25E6%2580%25A7%25E5%25B1%2585%25E6%25B0%2591)）
-* *伯利兹*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E4%25BC%25AF%25E5%2588%25A9%25E5%2585%25B9)
-* *巴西*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%25B7%25B4%25E8%25A5%25BF)
-* *文莱*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%25B1%25B6%25E8%258E%25B1)
-* *加拿大*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%258A%25A0%25E6%258B%25BF%25E5%25A4%25A7)（*加拿大永久居民*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%258A%25A0%25E6%258B%25BF%25E5%25A4%25A7%25E6%25B0%25B8%25E4%25B9%2585%25E5%25B1%2585%25E6%25B0%2591)）
-* *智利*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2599%25BA%25E5%2588%25A9)
-* *丹麦*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E4%25B8%25B9%25E9%25BA%25A6)
-* *多米尼加*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%25A4%259A%25E6%2598%258E%25E5%25B0%25BC%25E5%258A%25A0)
-* *厄瓜多尔*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%258E%2584%25E7%2593%259C%25E5%25A4%259A%25E5%25B0%2594)
-* *西班牙*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E8%25A5%25BF%25E7%258F%25AD%25E7%2589%2599)
-* *德国*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%25BE%25B7%25E5%259B%25BD)
-* *危地马拉*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%258D%25B1%25E5%259C%25B0%25E9%25A9%25AC%25E6%258B%2589)
-* *伊朗*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E4%25BC%258A%25E6%259C%2597)
-* *以色列*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597)
-* *日本*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2597%25A5%25E6%259C%25AC)（*日本永久居民*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2597%25A5%25E6%259C%25AC%25E6%25B0%25B8%25E4%25B9%2585%25E5%25B1%2585%25E6%25B0%2591)）
-* *马达加斯加*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E9%25A9%25AC%25E8%25BE%25BE%25E5%258A%25A0%25E6%2596%25AF%25E5%258A%25A0)
-* *马来西亚*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E9%25A9%25AC%25E6%259D%25A5%25E8%25A5%25BF%25E4%25BA%259A)
-* *墨西哥*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%25A2%25A8%25E8%25A5%25BF%25E5%2593%25A5)
-* *新西兰*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2596%25B0%25E8%25A5%25BF%25E5%2585%25B0)（*新西兰永久居民*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2596%25B0%25E8%25A5%25BF%25E5%2585%25B0%25E6%25B0%25B8%25E4%25B9%2585%25E5%25B1%2585%25E6%25B0%2591)）
-* *荷兰*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E8%258D%25B7%25E5%2585%25B0)
-* *挪威*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%258C%25AA%25E5%25A8%2581)
+* [阿根廷](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E9%2598%25BF%25E6%25A0%25B9%25E5%25BB%25B7)
+* [澳大利亚](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%25BE%25B3%25E5%25A4%25A7%25E5%2588%25A9%25E4%25BA%259A)（[澳洲永久性居民](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%25BE%25B3%25E6%25B4%25B2%25E6%25B0%25B8%25E4%25B9%2585%25E6%2580%25A7%25E5%25B1%2585%25E6%25B0%2591)）
+* [伯利兹](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E4%25BC%25AF%25E5%2588%25A9%25E5%2585%25B9)
+* [巴西](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%25B7%25B4%25E8%25A5%25BF)
+* [文莱](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%25B1%25B6%25E8%258E%25B1)
+* [加拿大](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%258A%25A0%25E6%258B%25BF%25E5%25A4%25A7)（[加拿大永久居民](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%258A%25A0%25E6%258B%25BF%25E5%25A4%25A7%25E6%25B0%25B8%25E4%25B9%2585%25E5%25B1%2585%25E6%25B0%2591)）
+* [智利](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2599%25BA%25E5%2588%25A9)
+* [丹麦](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E4%25B8%25B9%25E9%25BA%25A6)
+* [多米尼加](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%25A4%259A%25E6%2598%258E%25E5%25B0%25BC%25E5%258A%25A0)
+* [厄瓜多尔](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%258E%2584%25E7%2593%259C%25E5%25A4%259A%25E5%25B0%2594)
+* [西班牙](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E8%25A5%25BF%25E7%258F%25AD%25E7%2589%2599)
+* [德国](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%25BE%25B7%25E5%259B%25BD)
+* [危地马拉](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%258D%25B1%25E5%259C%25B0%25E9%25A9%25AC%25E6%258B%2589)
+* [伊朗](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E4%25BC%258A%25E6%259C%2597)
+* [以色列](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597)
+* [日本](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2597%25A5%25E6%259C%25AC)（[日本永久居民](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2597%25A5%25E6%259C%25AC%25E6%25B0%25B8%25E4%25B9%2585%25E5%25B1%2585%25E6%25B0%2591)）
+* [马达加斯加](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E9%25A9%25AC%25E8%25BE%25BE%25E5%258A%25A0%25E6%2596%25AF%25E5%258A%25A0)
+* [马来西亚](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E9%25A9%25AC%25E6%259D%25A5%25E8%25A5%25BF%25E4%25BA%259A)
+* [墨西哥](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%25A2%25A8%25E8%25A5%25BF%25E5%2593%25A5)
+* [新西兰](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2596%25B0%25E8%25A5%25BF%25E5%2585%25B0)（[新西兰永久居民](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2596%25B0%25E8%25A5%25BF%25E5%2585%25B0%25E6%25B0%25B8%25E4%25B9%2585%25E5%25B1%2585%25E6%25B0%2591)）
+* [荷兰](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E8%258D%25B7%25E5%2585%25B0)
+* [挪威](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%258C%25AA%25E5%25A8%2581)
 *  台湾
-* *澳门*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%25BE%25B3%25E9%2596%2580)
-* *香港*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E9%25A6%2599%25E6%25B8%25AF)
-* *巴拉圭*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%25B7%25B4%25E6%258B%2589%25E5%259C%25AD)巴拉圭永久居民
-* *秘鲁*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E7%25A7%2598%25E9%25B2%2581)
-* *菲律宾*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E8%258F%25B2%25E5%25BE%258B%25E5%25AE%25BE)
-* *俄罗斯*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF)
-* *南非*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%258D%2597%25E9%259D%259E)
-* *新加坡*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2596%25B0%25E5%258A%25A0%25E5%259D%25A1)（*新加坡永久居民*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2596%25B0%25E5%258A%25A0%25E5%259D%25A1%25E6%25B0%25B8%25E4%25B9%2585%25E5%25B1%2585%25E6%25B0%2591)）
-* *瑞典*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E7%2591%259E%25E5%2585%25B8)
-* *瑞士*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E7%2591%259E%25E5%25A3%25AB)
-* *泰国*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%25B3%25B0%25E5%259B%25BD)
-* *乌克兰*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0)
-* *白俄罗斯*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E7%2599%25BD%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF)
-* *英国*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E8%258B%25B1%25E5%259B%25BD)
-* *美国*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E7%25BE%258E%25E5%259C%258B)（*美国永久居民*(https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E7%25BE%258E%25E5%259B%25BD%25E6%25B0%25B8%25E4%25B9%2585%25E5%25B1%2585%25E6%25B0%2591)）
+* [澳门](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%25BE%25B3%25E9%2596%2580)
+* [香港](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E9%25A6%2599%25E6%25B8%25AF)
+* [巴拉圭](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%25B7%25B4%25E6%258B%2589%25E5%259C%25AD)巴拉圭永久居民
+* [秘鲁](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E7%25A7%2598%25E9%25B2%2581)
+* [菲律宾](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E8%258F%25B2%25E5%25BE%258B%25E5%25AE%25BE)
+* [俄罗斯](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF)
+* [南非](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E5%258D%2597%25E9%259D%259E)
+* [新加坡](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2596%25B0%25E5%258A%25A0%25E5%259D%25A1)（[新加坡永久居民](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%2596%25B0%25E5%258A%25A0%25E5%259D%25A1%25E6%25B0%25B8%25E4%25B9%2585%25E5%25B1%2585%25E6%25B0%2591)）
+* [瑞典](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E7%2591%259E%25E5%2585%25B8)
+* [瑞士](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E7%2591%259E%25E5%25A3%25AB)
+* [泰国](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E6%25B3%25B0%25E5%259B%25BD)
+* [乌克兰](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0)
+* [白俄罗斯](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E7%2599%25BD%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF)
+* [英国](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E8%258B%25B1%25E5%259B%25BD)
+* [美国](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E7%25BE%258E%25E5%259C%258B)（[美国永久居民](https://link.zhihu.com/?target=https%3A//zh.m.wikipedia.org/wiki/%25E7%25BE%258E%25E5%259B%25BD%25E6%25B0%25B8%25E4%25B9%2585%25E5%25B1%2585%25E6%25B0%2591)）
 
 中国是不如马达加斯加还是不如危地马拉？还是不如多米尼加、厄瓜多尔？
 
